--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1",
