--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "lib": ["es6"],
+    "target": "es2022",
+    "lib": ["es6","ES2023"],
     "module": "commonjs",
     "rootDir": "src",
     "resolveJsonModule": true,
