pusher integration done

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 PORT=4000
 MONGODB_PASSWORD=P%40rth2005
+
+# pusher
+APP_ID='1978221'
+PUSHER_KEY='b4e9beb2e0491b767451'
+PUSHER_SECRET='f1d27b67c6f04e1ad3ae'
+CLUSTER='ap2'
+USE_TLS=true
