--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.2.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1",
+    "pusher": "^5.2.0",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.2"
   }
