updated mail creds

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ PUSHER_KEY='b4e9beb2e0491b767451'
 PUSHER_SECRET='f1d27b67c6f04e1ad3ae'
 CLUSTER='ap2'
 USE_TLS=true
+
+# email credentials
+APP_PASSWORD=skjrcraxnkjttomu
